# wasm-rpg-neofuture

./: .gitignore  AI_GENERATION_ARCHITECTURE.md  ASSET_SPECIFICATION.md  AUDIT_FIXES_WITH_CODE.md  AUDIT_HONEST_STATUS.md  BACKEND_ENHANCEMENT_ROADMAP.md  CHANGELOG_v2.0.0.md  CLAUDE_OPUS_PROMPTS.md  COMPREHENSIVE_CODE_AUDIT.md  DEFERRED_FEATURES_IMPLEMENTED.md  DELIVERY_SUMMARY.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  DESIGN_ANSWERS.md  ENEMY_COMBAT_FIX.md  ENEMY_MECHANICS_AUDIT.md  FINAL_INTEGRATION_VERIFICATION.md  FRONTEND_FIXED.md  GAME_MECHANICS.md  GBA_STYLING_GUIDE.md  HACKATHON_JUDGE_AUDIT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP_COMPLETE.md  IMPROVEMENT_SUGGESTIONS.md  LAUNCH.md  LAUNCH_CHECKLIST.md  LOGIC_CONSISTENCY_AUDIT.md  PRODUCTION_AUDIT_COMPLETE.md  QUICK_REF.md  QUICK_TEST_GUIDE.md  RATE_LIMIT_HANDLING.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  implementation_plan.md  start.bat  start.sh  verify.js
engine/: CMakeLists.txt  ISSUES_AND_FIXES.md  README_M3.md  SMOKE_TEST.md  START_HERE.md  build.sh  wasm-smoke-test.html
engine/include/: collision.h  game.h  level_loader.h  renderer.h
engine/src/: collision.cpp  game.cpp  level_loader.cpp  main.cpp  renderer.cpp
frontend/: .env.development  .env.production  .eslintrc.cjs  UI_DESIGN_SPECS_IMPROVED.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/wasm/: game.js  game.wasm
frontend/src/: App.tsx  game-ui-enhancements.css  index.css  main.tsx
frontend/src/components/: EnemySprite.tsx  ErrorBoundary.tsx  GBAButton.tsx  GBADialog.tsx  GBAMenu.tsx  GBAStatBar.tsx  GBAWindow.tsx  GameHUD.tsx  Navbar.tsx  PlayerSprite.tsx
frontend/src/lib/: answerJudge.ts  api.ts
frontend/src/pages/: ChallengeRoom.tsx  Game.tsx  Home.tsx  Landing.tsx  LessonView.tsx  Map.tsx  Progress.tsx  Quiz.tsx  Results.tsx
frontend/src/types/: level.ts
member2/: DSA_CONCEPT_INTEGRATION.md  DSA_GAMEPLAY_FLOW.md  INTEGRATION_ANALYSIS.md  PHASE_1_COMPLETE.md  UI_DESIGN_SPECS.md
member2/backend/: .env.example  requirements.txt  test_api.py  test_grading.py
member2/backend/app/: database.py  main.py
member2/backend/app/data/: questions.py
member2/backend/app/models/: schemas.py
member2/backend/app/routes/: grading.py  lesson.py  level.py  progress.py  quiz.py  telemetry.py
member2/backend/levels/: queue_dungeon.json  sorting_dungeon.json  stack_dungeon.json
shared/: README.md  level_schema.json
(+3 files in other folders)
